project(Vision)
cmake_minimum_required(VERSION 2.8)
add_definitions(-DDLIB_NO_GUI_SUPPORT=ON)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x -pthread -Wall")
file(GLOB DEVLIB "devlib/*")
file(GLOB SERVER "server/*")
file(GLOB UTILITIES "utilities/*")
file(GLOB VISION "vision/*")
find_package(OpenCV REQUIRED)
add_executable(${PROJECT_NAME} main.cpp dlib/all/source.cpp ${DEVLIB} ${SERVER} ${UTILITIES} ${VISION})
target_link_libraries(${PROJECT_NAME} ${OpenCV_LIBS})
