project(Vision)
cmake_minimum_required(VERSION 2.8)
add_definitions(-DDLIB_NO_GUI_SUPPORT=ON)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x -pthread -Wall")
file(GLOB DEVLIB "devlib/*.hpp" "devlib/*.cpp")
file(GLOB SERVER "server/*.hpp" "server/*.cpp")
file(GLOB UTILITIES "utilities/*.hpp" "utilities/*.cpp")
file(GLOB VISION "vision/*.hpp" "vision/*.cpp")
find_package(OpenCV REQUIRED)
add_executable(${PROJECT_NAME} main.cpp dlib/all/source.cpp buildconf.h errordb.h ${DEVLIB} ${SERVER} ${UTILITIES} ${VISION})
target_link_libraries(${PROJECT_NAME} ${OpenCV_LIBS})
